force-app/main/default/objects/AI_Call_Log__c/AI_Call_Log__c.object-meta.xml
<CustomObject>
    <label>AI Call Log</label>
    <pluralLabel>AI Call Logs</pluralLabel>
    <description>One row per CommunityOS AI call: what was sent (pseudonymized), what came back, which model and prompt.</description>
    <nameField>
        <displayFormat>AI-{000000}</displayFormat>
        <label>AI Call Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>