force-app/main/default/objects/AI_Call_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Household</label>
    <description></description>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>AI_Call_Logs</relationshipName>
    <relationshipLabel>AI Call Logs</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>