force-app/main/default/objects/AI_Call_Log__c/fields/Context_Json__c.field-meta.xml
<CustomField>
    <fullName>Context_Json__c</fullName>
    <label>Context Sent (pseudonymized)</label>
    <description></description>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>