force-app/main/default/objects/AI_Call_Log__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <label>Error</label>
    <description></description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>