force-app/main/default/objects/AI_Call_Log__c/fields/Est_Cost_USD__c.field-meta.xml
<CustomField>
    <fullName>Est_Cost_USD__c</fullName>
    <description>Estimated cost from token counts and the rates in CommunityOS Settings.</description>
    <label>Est. Cost (USD)</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>