force-app/main/default/objects/AI_Call_Log__c/fields/Fields_Sent__c.field-meta.xml
<CustomField>
    <fullName>Fields_Sent__c</fullName>
    <label>Fields Sent</label>
    <description></description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>