force-app/main/default/objects/AI_Call_Log__c/fields/Input_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Input_Tokens__c</fullName>
    <description>Prompt tokens billed for this call (usage.input_tokens).</description>
    <label>Input Tokens</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>