force-app/main/default/objects/AI_Call_Log__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <description></description>
    <type>Text</type>
    <length>80</length>
</CustomField>