force-app/main/default/objects/AI_Call_Log__c/fields/Output_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Output_Tokens__c</fullName>
    <description>Output tokens billed for this call (usage.output_tokens).</description>
    <label>Output Tokens</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>