force-app/main/default/objects/AI_Call_Log__c/fields/Prompt_Version__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Version__c</fullName>
    <label>Prompt Version</label>
    <description></description>
    <type>Text</type>
    <length>80</length>
</CustomField>