force-app/main/default/objects/AI_Call_Log__c/fields/Response_Json__c.field-meta.xml
<CustomField>
    <fullName>Response_Json__c</fullName>
    <label>Response</label>
    <description></description>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>