force-app/main/default/objects/AI_Call_Log__c/fields/Retries__c.field-meta.xml
<CustomField>
    <fullName>Retries__c</fullName>
    <description>Automatic retries after a busy or rate-limited response.</description>
    <label>Retries</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>