force-app/main/default/objects/AI_Call_Log__c/fields/Schema_Enforced__c.field-meta.xml
<CustomField>
    <fullName>Schema_Enforced__c</fullName>
    <description>True when the request used structured outputs (JSON schema) so the reply had to match the schema.</description>
    <label>Schema Enforced</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>