force-app/main/default/objects/AI_Call_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <description></description>
    <type>Text</type>
    <length>20</length>
</CustomField>