force-app/main/default/objects/AI_Call_Log__c/fields/Tasks_Created__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Created__c</fullName>
    <label>Tasks Created</label>
    <description></description>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>