force-app/main/default/objects/AI_Call_Log__c/fields/Tasks_Dismissed__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Dismissed__c</fullName>
    <description>AI-suggested tasks staff dismissed. With Tasks Created, gives the acceptance rate.</description>
    <label>Tasks Dismissed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>